fixed padding on mobile

--- a/src/components/PostPreview/styles.module.css
+++ b/src/components/PostPreview/styles.module.css
@@ -9,6 +9,8 @@
 .container {
     margin-left: auto;
     margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
     max-width: 720px;
 }
 
