--- a/src/templates/BlogPost/styles.module.css
+++ b/src/templates/BlogPost/styles.module.css
@@ -13,16 +13,11 @@
 
 .container {
     margin: 50px auto 0;
+    padding-left: 15px;
+    padding-right: 15px;
     max-width: 720px;
 }
 
 .title {
     text-align: center;
-}
-
-@media (max-width: 660px) {
-    .container {
-        margin-left: 15px;
-        margin-right: 15px;
-    }
 }
